Customize search box messages and placeholders. Staging build

--- a/app/components/isochrone-interface/template.hbs
+++ b/app/components/isochrone-interface/template.hbs
@@ -8,13 +8,13 @@
       {{else}}
         <input type="radio" id="radio-1" name="options" {{action "setIsochroneMode" "pedestrian"}}>
       {{/if}}
-      <label for="radio-1">a pé</label><br>
+      <label for="radio-1">a caminhar</label><br>
       {{#if pedestrianIsochrone}}
         <div class="isochrone-legend-box">
-          <div class="isochrone-legend" style="color:#50bf40;">15 min a caminhar da paragem</div>
-          <div class="isochrone-legend" style="color:#9fbf40;">30 min a caminhar da paragem</div>
-          <div class="isochrone-legend" style="color:#bf8f40;">45 min a caminhar da paragem</div>
-          <div class="isochrone-legend" style="color:#bf4040;">60 min a caminhar da paragem</div>
+          <div class="isochrone-legend" style="color:#50bf40;">15 min a caminhar</div>
+          <div class="isochrone-legend" style="color:#9fbf40;">30 min a caminhar</div>
+          <div class="isochrone-legend" style="color:#bf8f40;">45 min a caminhar</div>
+          <div class="isochrone-legend" style="color:#bf4040;">60 min a caminhar</div>
         </div>
       {{/if}}
       {{#if bicycleIsochrone}}
@@ -25,10 +25,10 @@
       <label for="radio-2">de bicicleta</label><br>
       {{#if bicycleIsochrone}}
         <div class="isochrone-legend-box">
-          <div class="isochrone-legend" style="color:#50bf40;">15 min a pedalar da paragem</div>
-          <div class="isochrone-legend" style="color:#9fbf40;">30 min a pedalar da paragem</div>
-          <div class="isochrone-legend" style="color:#bf8f40;">45 min a pedalar da paragem</div>
-          <div class="isochrone-legend" style="color:#bf4040;">60 min a pedalar da paragem</div>
+          <div class="isochrone-legend" style="color:#50bf40;">15 min a pedalar</div>
+          <div class="isochrone-legend" style="color:#9fbf40;">30 min a pedalar</div>
+          <div class="isochrone-legend" style="color:#bf8f40;">45 min a pedalar</div>
+          <div class="isochrone-legend" style="color:#bf4040;">60 min a pedalar</div>
         </div>
       {{/if}}
       {{#if multimodalIsochrone}}
@@ -39,10 +39,10 @@
       <label for="radio-4">de transportes públicos</label><br>
       {{#if multimodalIsochrone}}
         <div class="isochrone-legend-box">
-          <div class="isochrone-legend" style="color:#50bf40;">15 min a viajar da paragem</div>
-          <div class="isochrone-legend" style="color:#9fbf40;">30 min a viajar da paragem</div>
-          <div class="isochrone-legend" style="color:#bf8f40;">45 min a viajar da paragem</div>
-          <div class="isochrone-legend" style="color:#bf4040;">60 min a viajar da paragem</div>
+          <div class="isochrone-legend" style="color:#50bf40;">15 min a viajar</div>
+          <div class="isochrone-legend" style="color:#9fbf40;">30 min a viajar</div>
+          <div class="isochrone-legend" style="color:#bf8f40;">45 min a viajar</div>
+          <div class="isochrone-legend" style="color:#bf4040;">60 min a viajar</div>
         </div>
       {{/if}}
       {{#if autoIsochrone}}
@@ -53,10 +53,10 @@
       <label for="radio-3">de carro</label>
       {{#if autoIsochrone}}
         <div class="isochrone-legend-box">
-          <div class="isochrone-legend" style="color:#50bf40;">15 min a conduzir da paragem</div>
-          <div class="isochrone-legend" style="color:#9fbf40;">30 min a conduzir da paragem</div>
-          <div class="isochrone-legend" style="color:#bf8f40;">45 min a conduzir da paragem</div>
-          <div class="isochrone-legend" style="color:#bf4040;">60 min a conduzir da paragem</div>
+          <div class="isochrone-legend" style="color:#50bf40;">15 min a conduzir</div>
+          <div class="isochrone-legend" style="color:#9fbf40;">30 min a conduzir</div>
+          <div class="isochrone-legend" style="color:#bf8f40;">45 min a conduzir</div>
+          <div class="isochrone-legend" style="color:#bf4040;">60 min a conduzir</div>
         </div>
       {{/if}}
     </div>
