--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,9 +1,9 @@
 @import 'ember-power-select';
 
-$mapzen-red: #cc5420;
-$mapzen-blue: #74a9ad;
-$mapzen-dark-red: #d13e00;
-$mapzen-dark-blue: #258784;
+$tpp-red: #cc5420;
+$tpp-blue: #74a9ad;
+$tpp-dark-red: #d13e00;
+$tpp-dark-blue: #258784;
 $explorer-bluegreen: #9dbfc1;
 $white: #fff;
 $pink: #edb3af;
@@ -49,7 +49,7 @@ h2:hover {
 }
 
 h4 {
-  color: $mapzen-red;
+  color: $tpp-red;
   font-size: 18px;
   margin-top: 10px;
   font-weight: normal;
@@ -222,14 +222,14 @@ button {
 }
 
 .svg-end {
-  fill: $mapzen-red;
-  stroke: $mapzen-dark-red;
+  fill: $tpp-red;
+  stroke: $tpp-dark-red;
   stroke-width: 15%;
 }
 
 .svg-stop {
-  fill: $mapzen-red;
-  stroke: $mapzen-dark-red;
+  fill: $tpp-red;
+  stroke: $tpp-dark-red;
   stroke-width: 15%;
   width: 9px;
 }
@@ -241,7 +241,7 @@ button {
 
 .svg-stop-rsp {
   fill: $explorer-bluegreen;
-  stroke: $mapzen-dark-blue;
+  stroke: $tpp-dark-blue;
   stroke-width: 15%;
   width: 9px;
   z-index: 900;
@@ -253,8 +253,8 @@ button {
 }
 
 .svg-stop-legend {
-  fill: $mapzen-red;
-  stroke: $mapzen-dark-red;
+  fill: $tpp-red;
+  stroke: $tpp-dark-red;
   stroke-width: 15%;
   width: 9px;
 }
@@ -447,7 +447,7 @@ input, button, select, textarea {
 .loading-spinner-03 {
   -webkit-animation: spin 2s linear infinite;
   animation: spin 1s linear infinite;
-  border: 10px solid $mapzen-blue;
+  border: 10px solid $tpp-blue;
   border-radius: 50%;
   border-top: 10px solid $white;
   height: 70px;
@@ -479,7 +479,7 @@ input, button, select, textarea {
   font-weight: 600;
 }
 
-.btn-mapzen {
+.btn-tpp {
   background-color: nth($mz-darkpurples, 3);
   border-radius: 0;
   &:hover {
@@ -487,7 +487,7 @@ input, button, select, textarea {
   }
 }
 
-.btn-mapzen-alt {
+.btn-tpp-alt {
   outline-color: nth($mz-darkpurples, 3);
   outline-style: solid;
   outline-width: 2px;
@@ -499,7 +499,7 @@ input, button, select, textarea {
   }
 }
 
-.btn-mapzen-alt-style {
+.btn-tpp-alt-style {
   color: $white;
   outline-color: nth($mz-darkpurples, 3);
   outline-style: solid;
@@ -658,7 +658,7 @@ td.day.active.today:hover {
 }
 
 .reset-datetime {
-  color: $mapzen-red;
+  color: $tpp-red;
   cursor: pointer;
   font-size: 12px;
   font-style: italic;
@@ -709,7 +709,7 @@ td.day.active.today:hover {
 }
 
 .run-mapmatch {
-  background-color: $mapzen-red;
+  background-color: $tpp-red;
 }
 
 .map-match-narrative {
@@ -772,13 +772,13 @@ td.day.active.today:hover {
   background-color: nth($mz-darkpurples, 3);
   margin: 0;
   &:hover{
-    color: $mapzen-dark-blue;
+    color: $tpp-dark-blue;
   }
 }
 
 .error-message {
   background-color: $pink;
-  border: 2px solid $mapzen-red;
+  border: 2px solid $tpp-red;
   padding: 10px;
   font-size: smaller;
 }
@@ -896,7 +896,7 @@ td.day.active.today:hover {
 }
 
 .legend-gpx-trace{
-  background-color: $mapzen-red;
+  background-color: $tpp-red;
   height: 7px;
   border: 2px solid #444444;
   border-radius: 5px;
