--- a/app/components/isochrone-legend/template.hbs
+++ b/app/components/isochrone-legend/template.hbs
@@ -1,6 +1,6 @@
 <div class="isochrone-legend-box">
-  <div class="isochrone-legend" style="color:#4dac26; opacity:.6;">15 min a {{mode}} da paragem</div>
-  <div class="isochrone-legend" style="color:#b8e186; opacity: 1;">30 min a {{mode}} da paragem</div>
-  <div class="isochrone-legend" style="color:#a3166d; opacity:.6;">45 min a {{mode}} da paragem</div>
-  <div class="isochrone-legend" style="color:#d01c8b; opacity:.4;">60 min a {{mode}} da paragem</div>
+  <div class="isochrone-legend" style="color:#4dac26; opacity:.6;">15 min a {{mode}}</div>
+  <div class="isochrone-legend" style="color:#b8e186; opacity: 1;">30 min a {{mode}}</div>
+  <div class="isochrone-legend" style="color:#a3166d; opacity:.6;">45 min a {{mode}}</div>
+  <div class="isochrone-legend" style="color:#d01c8b; opacity:.4;">60 min a {{mode}}</div>
 </div>
