--- a/app/operators/template.hbs
+++ b/app/operators/template.hbs
@@ -11,7 +11,7 @@
   <div class="btn-group-vertical" role="group" >
   {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null)}}<button class="btn btn-transparent-alt">Mostrar Rotas</button>{{/link-to}}
   {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null)}}<button class="btn btn-transparent-alt">Mostrar Paragens</button>{{/link-to}}
-  {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null)}}<button class="btn btn-mapzen-alt">Mostrar Operadores</button>{{/link-to}}
+  {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null)}}<button class="btn btn-tpp-alt">Mostrar Operadores</button>{{/link-to}}
     <div class="expanded-selection">
       {{#if onestop_id}}
         {{#operator-detail bbox=bbox onestop_id=onestop_id operator=selectedOperator operators=model}}{{/operator-detail}}
@@ -22,7 +22,10 @@
           options=operators
           selected=operator
           placeholder=placeholderMessage
-          searchPlaceholder="Escreva para filtrar..."
+          noMatchesMessage="Sem resultados"
+          searchMessage="Escreva para pesquisar"
+          loadingMessage="Processando a pesquisa..."
+          searchPlaceholder="Escreva para filtrar"
           onchange=(action "setOperator")
           as |operator|
         }}
@@ -42,7 +45,7 @@
       {{else}}
         <p class="caption">{{operatorSelectContent}}</p>
         {{#if mapMoved}}
-          <button class="btn btn-mapzen" {{action "updatebbox"}}>Refazer pesquisa na área do mapa</button>
+          <button class="btn btn-tpp" {{action "updatebbox"}}>Refazer pesquisa na área do mapa</button>
         {{/if}}
       {{/if}}
     </div>
@@ -77,6 +80,10 @@
             search=(action "searchRepo")
             selected=place
             placeholder=searchbarContent
+            noMatchesMessage="Sem resultados"
+            searchMessage="Escreva para pesquisar"
+            loadingMessage="Processando a pesquisa..."
+            searchPlaceholder="Escreva para filtrar"
             onchange=(action "setPlace")
             onclose=(action "clearPlace")
             as |repo|
